--- a/style.css
+++ b/style.css
@@ -1,54 +1,75 @@
+body {
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .menu {
-    margin: 0;
-    padding: 0;
     list-style: none;
-    display: flex;
-   }
-   
-   .menu-item {
-    position: relative;
-    margin-right: 15px 0;
-    font-size: 18px;
-    color: white;
-   }
-   .menu-item:hover .submenu {
-    display: block;
-   }
-   
-   
-   .submenu {
-    position: absolute;
-    width: 100%;
-    top: 100%;
-    left: 0;
     margin: 0;
-    list-style: none;
-    padding: 10px;
+    
     background-color: gray;
-    display: none;
-   }
-   .sidebar {
+   
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 60px; 
-    height: 100%;
-    background-color: gray;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: width 0.3s;
+    padding: 0;
 }
-.sidebar:hover {
-    width: 200px; 
+
+.menu-item {
+    position: relative;
+    writing-mode: vertical-lr;
 }
+
+.menu-item:hover .submenu {
+    display: block;
+}
+
+
+
 .menu-text {
-    writing-mode: vertical-rl;
-    text-orientation: mixed;
+    display: flex;
+    justify-content: center;
+    padding: 10px 18px;
+    
+    background-color: gray;
     color: white;
-    font-size: 18px;
-    white-space: nowrap;
+    font-size: 26px;
+    font-family: sans-serif;
+    
+    height: 700px;
+
 }
-.menu-text:hover{
+
+.submenu {
+    position: absolute;
+    width: 200px;
+    height: 750px;
+    list-style: none;
+    background-color: gray;
     display: none;
+    writing-mode: horizontal-tb;
+}
+
+.submenu-item {
+    color: white;
+    font-size: 20px;
+    font-family: sans-serif;
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 25px;
+    text-decoration: none;
+    align-items: center;
+}
+
+.submenu-item {
+    padding: 50px 0 1px 0;
+}
+
+
+.diamond {
+    color: orange;
+    margin-right: 10px;
+}
+
+.menu-item:hover .menu-text {
+    transform: translatex(150%);
+    transition: transform 0.5s ease-in;
 }
