--- a/style.css
+++ b/style.css
@@ -11,8 +11,13 @@ body {
    height: 100vh;
     position: fixed;
     padding: 0;
+   
+    transform: translateX(-20%);
+    transition: transform 0.6s ease-in;
 }
-
+.menu:hover{
+    transform: translateX(0);
+}
 
 
 .menu-item:hover .submenu {
@@ -39,10 +44,10 @@ body {
 .submenu {
     
     width: 200px;
-    height: 750px;
-   
+    list-style: none;
+   display: none;
     background-color: gray;
-    display: none;
+    
     writing-mode: horizontal-tb;
 }
 
@@ -70,8 +75,4 @@ body {
     margin-right: 10px;
 }
 
-.menu-item:hover .menu-text {
-    transform: translatex(150%);
-    transition: transform 0.9s ease-in;
 
-}
